@startuml

title __SHARE's Class Diagram__\n

  namespace com.journear.app {
    namespace ui {
      namespace share {
        class com.journear.app.ui.share.MessagesFragment {
            + onCreateView()
        }
      }
    }
  }
  

  namespace com.journear.app {
    namespace ui {
      namespace share {
        class com.journear.app.ui.share.MessagesViewModel {
            - mText : MutableLiveData<String>
            + ShareViewModel()
            + getText()
        }
      }
    }
  }
  

  com.journear.app.ui.share.MessagesFragment -up-|> androidx.fragment.app.Fragment
  com.journear.app.ui.share.MessagesFragment o-- com.journear.app.ui.share.MessagesViewModel : shareViewModel
  com.journear.app.ui.share.MessagesViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
